[package]
name = "k256_keygen"
version = "0.1.0"
edition = "2024"
[dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
ethers = { version = "2", default-features = false }
aes-gcm = "0.10"
rand_core = "0.9.3"
hex = "0.4"
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "3212af2", features = [
    "secp256k1",
] }
alloy-primitives = "1.2.0"
secp256k1 = "0.29.1" 
